# cozi_mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  cozi_mcp.py  pyproject.toml
src/cozi_mcp/: __init__.py  server.py
