[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cozi-mcp"
version = "1.0.0"
description = "Unofficial MCP server for Cozi Family Organizer API integration"
authors = [
    {name = "Matthew Jucius", email = "matthew@jucius.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "cozi", "family-organizer", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "py-cozi-client>=1.3.0",
    "smithery",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/mjucius/cozi-mcp"
Repository = "https://github.com/mjucius/cozi-mcp"
Issues = "https://github.com/mjucius/cozi-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cozi_mcp"]

[project.scripts]
playground = "smithery.cli.playground:main"
dev = "smithery.cli.dev:main"

[tool.smithery]
server = "cozi_mcp.server:create_server"